--- a/Makefile.in
+++ b/Makefile.in
@@ -1,10 +1,10 @@
 # $Id: Makefile.in 2660 2006-07-18 17:23:31Z dbaelde $
 
 PROGNAME := ocaml-winsvc
-DISTFILES := @AUTOCONF_INSTALL_FILES@ CHANGES COPYING Makefile.in README \
+DISTFILES := @AUTOCONF_INSTALL_FILES@ CHANGES Makefile.in \
 	bootstrap configure configure.ac  \
-	src/*.ml src/*.mli src/*.ml.in src/Makefile.in src/META.in \
-	src/OCamlMakefile examples/Makefile.connect.in \
+	src/*.ml src/*.mli src/*.c src/Makefile.in src/META.in \
+	src/OCamlMakefile examples/Makefile.in \
 	examples/*.ml examples/Makefile examples/OCamlMakefile
 VERSION = @VERSION@
 
