--- a/src/META.in
+++ b/src/META.in
@@ -2,5 +2,5 @@ name = "winsvc"
 version = "@VERSION@"
 description = "Windows Service Toolkit"
 requires = "threads"
-archive(byte) = "service.cma"
-archive(native) = "service.cmxa"
+archive(byte) = "winsvc.cma"
+archive(native) = "winsvc.cmxa"
