--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,7 @@
-Makefile
-aclocal.m4
-autom4te.cache/
-config.guess
-config.log
-config.status
-config.sub
-configure
-install-sh
-src/META
-src/Makefile
-src/._bcdi/
-src/._d/
-src/._ncdi/
-src/*.a
-src/*.cm*
-src/*.o
-src/*.so
-src/cry_ssl.ml
-examples/Makefile
-examples/._d/
-examples/example
-examples/example.cm*
-examples/example.o
-*.annot
-*.dll
+*~
+_build
+*.byte
+*.native
+_tests
+.merlin
+*.install
