--- a/winsvc.opam
+++ b/winsvc.opam
@@ -8,10 +8,11 @@ license: "GPL-2.0"
 homepage: "https://github.com/savonet/ocaml-winsvc"
 bug-reports: "https://github.com/savonet/ocaml-winsvc/issues"
 depends: [
-  "dune" {> "2.0"}
+  "dune" {>= "2.8"}
+  "odoc" {with-doc}
 ]
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   [
     "dune"
     "build"
