--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,9 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout code
+      uses: actions/checkout@v1
     - name: Setup OCaml
-      uses: avsm/setup-ocaml@v1.0
+      uses: avsm/setup-ocaml@v2
     - name: Install
       run: opam install -y .
