--- a/winsvc.opam
+++ b/winsvc.opam
@@ -9,6 +9,7 @@ homepage: "https://github.com/savonet/ocaml-winsvc"
 bug-reports: "https://github.com/savonet/ocaml-winsvc/issues"
 depends: [
   "dune" {>= "2.8"}
+  "ocaml" {>= "4.06"}
   "odoc" {with-doc}
 ]
 build: [
